# ConfigurationSystem

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  Config.cpp  Config.hpp  ConfigSerializer.cpp  ConfigSerializer.hpp  Main.cpp
src/include/: Config.hpp  ConfigSerializer.hpp
test/: CMakeLists.txt  ConfigTest.cpp  config_test.json
tests/: CMakeLists.txt  ConfigTest.cpp  config-test.txt
